--- a/angular-building-blocks/src/root/components/root.component.html
+++ b/angular-building-blocks/src/root/components/root.component.html
@@ -1,2 +1,3 @@
 <!-- Compiled , Template Programming  -->
 <h1> Siemens Finance Corporations Limited</h1>
+<emi-calculator-container></emi-calculator-container>
