--- a/angular-building-blocks/src/creditCardEmiCalculator/components/emiCalculatorContainer/emiCalculatorContainer.component.html
+++ b/angular-building-blocks/src/creditCardEmiCalculator/components/emiCalculatorContainer/emiCalculatorContainer.component.html
@@ -3,7 +3,7 @@
     <table>
         <tr>
             <td>
-                <emi-calculator (onResultComputed)="onResultComputed_Handler($event)"></emi-calculator>
+                <emi-calculator (onParameterComputed)="onParameterComputed_Handler($event)"></emi-calculator>
                 <emi-summary [result]="resultData"></emi-summary>
             </td>
             <td>
